[package]
name = "annotate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dna = {path="../rust-dna"}
loctogene = {path="../rust-loctogene"}
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
